Edit bottom page navigation and styling of homepage& style.css

--- a/index.html
+++ b/index.html
@@ -83,38 +83,50 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 6</div>
-				<img src="assets/images/banner/cover-image.jpg" style="width:100%">
-				<button class="btn" href="index.html">HomePage</button>
+				<img src="assets/images/banner/cover-image.jpg" alt="Home page banner" style="width:100%">
+				<div class="container">
+					<button class="btn" onclick="document.location = 'index.html'">Home</button>
+				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">2 / 6</div>
-				<img src="assets/images/banner/staple-banner.jpg" style="width:100%">
-				<button class="btn" href="staple.html">Staple Hill</button>
+				<img src="assets/images/banner/staple-banner.jpg" alt="Staple Hill" style="width:100%">
+				<div class="container">
+					<button class="btn" onclick="document.location = 'staple.html'">Staple Hill</button>
+				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 6</div>
-				<img src="assets/images/slideshow/gorge/gorge02.jpg" style="width:100%">
-				<button class="btn" href="cheddar-gorge.html">Cheddar Gorge</button>
+				<img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge" style="width:100%">
+				<div class="container">
+					<button class="btn" onclick="document.location = 'cheddar-gorge.html'">Cheddar Gorge</button>
+				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">4 / 6</div>
-				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" style="width:100%">
-				<button class="btn" href="blagdon.html">Blagdon Lake</button>
+				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" alt="Blagdon Lake" style="width:100%">
+				<div class="container">
+					<button class="btn" onclick="document.location = 'blagdon.html'">Blagdon Lake</button>
+				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">5 / 6</div>
-				<img src="assets/images/banner/coastal-banner.jpg" style="width:100%">
-				<button class="btn" href="somerset-coastal.html">Somerset Coastal Path</button>
+				<img src="assets/images/banner/coastal-banner.jpg" alt="Somerset Coastal Path" style="width:100%">
+				<div class="container">
+					<button class="btn" onclick="document.location = 'somerset-coastal.html'">Somerset Coastal Path</button>
+				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">6 / 6</div>
-				<img src="assets/images/banner/exmoor-banner.jpg" style="width:100%">
-				<button class="btn" href="exmoor.html">Exmoor National Park</div>
+				<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park" style="width:100%">
+				<div class="container">
+					<button class="btn" onclick="document.location = 'exmoor.html'">Exmoor National Park</button>
+				</div>
 			</div>
 
 		</div>
@@ -143,8 +155,9 @@
 		<br>
 
 		<section class="bottom-nav">
+        <h6>Explore our trails</h6>
 			<div class="dropup">
-				<button class="dropbtn">Explore</button>
+            <button class="dropbtn">Explore</button>
 				<div class="dropup-content">
 					<a href="staple.html">Staple Hill</a>
 					<a href="cheddar-gorge.html">Cheddar Gorge</a>
@@ -172,24 +185,22 @@
 		<!--Scripts-->
 
 		<!--Jquery-->
-		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
 		<!--Popper-->
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
 		<!--Bootstrap library-->
-		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-		</script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 		<!--Navigation bar JS-->
-		<script type="text/javascript" src="assets/js/nav.js"></script>
+		<script src="assets/js/nav.js"></script>
 
 		<!--Maps JS-->
-		<script type="text/javascript" src="assets/js/maps.js"></script>
+		<script src="assets/js/maps.js"></script>
 
 		<!--Slideshow JS-->
-		<script type="text/javascript" src="assets/js/slide.js"></script>
+		<script src="assets/js/slide.js"></script>
 
 		<!--Google maps scripts-->
 		<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
