--- a/staple.html
+++ b/staple.html
@@ -105,6 +105,7 @@ location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
 					<br>
 
 					<section class="bottom-nav">
+                    <h6>Explore our trails</h6>
 						<div class="dropup">
 							<button class="dropbtn">Explore</button>
 							<div class="dropup-content">
@@ -123,15 +124,11 @@ location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
 					<footer>
 						<div>
 							<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-							<h5 href="index.html">Somerset Trails</h5>
+							<h4>Somerset Trails</h4>
 						</div>
 						<div>
 							<h5>Social Media</h5>
 						</div>
-						<link>
-						</link>
-						<link>
-						</link>
 					</footer>
 
 					<script>
@@ -149,7 +146,7 @@ location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 					<!--Slideshow JS-->
-					<script type="text/javascript" src="assets/js/slide.js"></script>
+					<script src="assets/js/slide.js"></script>
 
 					<!--Navigation bar JS-->
 					<script src="assets/js/nav.js"></script>
