--- a/blagdon.html
+++ b/blagdon.html
@@ -50,7 +50,6 @@
 		<br>
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
-		</div>
 	</section>
 
 	<br>
@@ -72,17 +71,17 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 3</div>
-				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake01.jpg" style="width:100%">
+				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake01.jpg" alt="Blagdon Lake" style="width:100%">
 			</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">2 / 3</div>
-					<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" style="width:100%">
+					<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" alt="Blagdon Lake" style="width:100%">
 			</div>
 
 					<div class="mySlides fade">
 						<div class="numbertext">3 / 3</div>
-						<img src="assets/images/slideshow/slide-blagdon/blagdon-lake03.jpg" style="width:100%">
+						<img src="assets/images/slideshow/slide-blagdon/blagdon-lake03.jpg" alt="Blagdon Lake" style="width:100%">
 			</div>
 
 					</div>
@@ -107,6 +106,7 @@
 					<!--Bottom navigation, for user flexibility-->
 
 					<section class="bottom-nav">
+                    <h6>Explore our trails</h6>
 						<div class="dropup">
 							<button class="dropbtn">Explore</button>
 							<div class="dropup-content">
@@ -127,15 +127,11 @@
 					<footer>
 						<div>
 							<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-							<h5 href="index.html">Somerset Trails</h5>
+							<h4>Somerset Trails</h4>
 						</div>
 						<div>
 							<h5>Social Media</h5>
 						</div>
-						<link>
-						</link>
-						<link>
-						</link>
 					</footer>
 
 					<script>
@@ -153,7 +149,7 @@
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 					<!--Slideshow JS-->
-					<script type="text/javascript" src="assets/js/slide.js"></script>
+					<script src="assets/js/slide.js"></script>
 
 					<!--Navigation bar JS-->
 					<script src="assets/js/nav.js"></script>
