--- a/exmoor.html
+++ b/exmoor.html
@@ -68,18 +68,18 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 3</div>
-				<img src="assets/images/slideshow/slide-exmoor/exmoor01.jpg" style="width:100%">
-			</div>
+				<img src="assets/images/slideshow/slide-exmoor/exmoor01.jpg" alt="Exmoor National Park" style="width:100%">
+</div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">2 / 3</div>
-					<img src="assets/images/slideshow/slide-exmoor/exmoor02.jpg" style="width:100%">
-			</div>
+					<img src="assets/images/slideshow/slide-exmoor/exmoor02.jpg" alt="Exmoor National Park" style="width:100%">
+</div>
 
 					<div class="mySlides fade">
 						<div class="numbertext">3 / 3</div>
-						<img src="assets/images/slideshow/slide-exmoor/exmoor03.jpg" style="width:100%">
-			</div>
+						<img src="assets/images/slideshow/slide-exmoor/exmoor03.jpg" alt="Exmoor National Park" style="width:100%">
+</div>
 
 					</div>
 					<br>
@@ -93,18 +93,19 @@
 					<br>
 
 					<!--<section class="cheddar-map">
-    <div
-		<h2><strong>Cheddar gorge street view</strong></h2>
-		<iframe src="https://www.google.com/maps/embed/v1/streetview" key="AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8"
-		location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
-    </div>
-	</section>-->
+ <div
+<h2><strong>Cheddar gorge street view</strong></h2>
+<iframe src="https://www.google.com/maps/embed/v1/streetview" key="AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8"
+location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
+ </div>
+</section>-->
 
 					<!--Bottom navigation, for user flexibility-->
 
 					<br>
 
 					<section class="bottom-nav">
+                    <h6>Explore our trails</h6>
 						<div class="dropup">
 							<button class="dropbtn">Explore</button>
 							<div class="dropup-content">
@@ -123,15 +124,11 @@
 					<footer>
 						<div>
 							<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-							<h5 href="index.html">Somerset Trails</h5>
+							<h4>Somerset Trails</h4>
 						</div>
 						<div>
 							<h5>Social Media</h5>
 						</div>
-						<link>
-						</link>
-						<link>
-						</link>
 					</footer>
 
 					<script>
@@ -149,7 +146,7 @@
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 					<!--Slideshow JS-->
-					<script type="text/javascript" src="assets/js/slide.js"></script>
+					<script src="assets/js/slide.js"></script>
 
 					<!--Navigation bar JS-->
 					<script src="assets/js/nav.js"></script>
