--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -70,17 +70,17 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 3</div>
-				<img src="assets/images/slideshow/coastal/coastal-path01.jpg" style="width:100%">
+				<img src="assets/images/slideshow/coastal/coastal-path01.jpg" alt="Somerset Coastal Path" style="width:100%">
         </div>
 
 				<div class="mySlides fade">
 					<div class="numbertext">2 / 3</div>
-					<img src="assets/images/slideshow/coastal/coastal-path02.jpg" style="width:100%">
+					<img src="assets/images/slideshow/coastal/coastal-path02.jpg" alt="Somerset Coastal Path" style="width:100%">
 		</div>
 
 					<div class="mySlides fade">
 						<div class="numbertext">3 / 3</div>
-						<img src="assets/images/slideshow/coastal/coastal-path03.jpg" style="width:100%">
+						<img src="assets/images/slideshow/coastal/coastal-path03.jpg" alt="Somerset Coastal Path" style="width:100%">
 		</div>
 
 					</div>
@@ -105,6 +105,7 @@
 					<br>
 
 					<section class="bottom-nav">
+                    <h6>Explore our trails</h6>
 						<div class="dropup">
 							<button class="dropbtn">Explore</button>
 							<div class="dropup-content">
@@ -123,15 +124,11 @@
 					<footer>
 						<div>
 							<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-							<h5 href="index.html">Somerset Trails</h5>
+							<h4>Somerset Trails</h4>
 						</div>
 						<div>
 							<h5>Social Media</h5>
 						</div>
-						<link>
-						</link>
-						<link>
-						</link>
 					</footer>
 
 					<script>
@@ -149,7 +146,7 @@
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 					<!--Slideshow JS-->
-					<script type="text/javascript" src="assets/js/slide.js"></script>
+					<script src="assets/js/slide.js"></script>
 
 					<!--Navigation bar JS-->
 					<script src="assets/js/nav.js"></script>
