Add scroll button& add statement - view here to slide btn

--- a/blagdon.html
+++ b/blagdon.html
@@ -106,7 +106,7 @@
 					<!--Bottom navigation, for user flexibility-->
 
 					<section class="bottom-nav">
-                    <h6>Explore our trails</h6>
+						<h6>Explore our trails</h6>
 						<div class="dropup">
 							<button class="dropbtn">Explore</button>
 							<div class="dropup-content">
@@ -122,6 +122,10 @@
 
 					<br>
 
+					<!--Scroll back to top button-->
+					<div>
+						<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+					</div>
 
 
 					<footer>
@@ -147,6 +151,9 @@
 
 					<!--Bootstrap library-->
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+					<!--Scroll button JS-->
+					<script src="assets/js/scroll.js"></script>
 
 					<!--Slideshow JS-->
 					<script src="assets/js/slide.js"></script>
