--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<div class="numbertext">2 / 6</div>
 				<img src="assets/images/banner/staple-banner.jpg" alt="Staple Hill" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'staple.html'">Staple Hill</button>
+					<button class="btn" onclick="document.location = 'staple.html'"><h5>View here:</h5>Staple Hill</button>
 				</div>
 			</div>
 
@@ -101,7 +101,7 @@
 				<div class="numbertext">3 / 6</div>
 				<img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'cheddar-gorge.html'">Cheddar Gorge</button>
+					<button class="btn" onclick="document.location = 'cheddar-gorge.html'"><h5>View here:</h5>Cheddar Gorge</button>
 				</div>
 			</div>
 
@@ -109,7 +109,7 @@
 				<div class="numbertext">4 / 6</div>
 				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" alt="Blagdon Lake" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'blagdon.html'">Blagdon Lake</button>
+					<button class="btn" onclick="document.location = 'blagdon.html'"><h5>View here:</h5>Blagdon Lake</button>
 				</div>
 			</div>
 
@@ -117,7 +117,7 @@
 				<div class="numbertext">5 / 6</div>
 				<img src="assets/images/banner/coastal-banner.jpg" alt="Somerset Coastal Path" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'somerset-coastal.html'">Somerset Coastal Path</button>
+					<button class="btn" onclick="document.location = 'somerset-coastal.html'"><h5>View here:</h5>Somerset Coastal Path</button>
 				</div>
 			</div>
 
@@ -125,7 +125,7 @@
 				<div class="numbertext">6 / 6</div>
 				<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'exmoor.html'">Exmoor National Park</button>
+					<button class="btn" onclick="document.location = 'exmoor.html'"><h5>View here:</h5>Exmoor National Park</button>
 				</div>
 			</div>
 
@@ -155,7 +155,7 @@
 		<br>
 
 		<section class="bottom-nav">
-        <h6>Explore our trails</h6>
+        <h6>Our trails</h6>
 			<div class="dropup">
             <button class="dropbtn">Explore</button>
 				<div class="dropup-content">
@@ -170,6 +170,12 @@
 		</section>
 
 		<br>
+
+        <!--Scroll back to top button-->
+        <div>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        </div>
+
 		<!--Footer section-->
 
 		<footer class="footer">
@@ -192,6 +198,9 @@
 
 		<!--Bootstrap library-->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+        <!--Scroll button JS-->
+        <script src="assets/js/scroll.js"></script>
 
 		<!--Navigation bar JS-->
 		<script src="assets/js/nav.js"></script>
