--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -105,7 +105,7 @@ location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
 					<!--Bottom navigation, for user flexibility-->
 
 					<section class="bottom-nav">
-                    <h6>Explore our trails</h6>
+						<h6>Explore our trails</h6>
 						<div class="dropup">
 							<button class="dropbtn">Explore</button>
 							<div class="dropup-content">
@@ -120,6 +120,11 @@ location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
 					</section>
 
 					<br>
+
+					<!--Scroll back to top button-->
+					<div>
+						<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+					</div>
 
 					<footer>
 						<div>
@@ -144,6 +149,9 @@ location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
 
 					<!--Bootstrap library-->
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+					<!--Scroll button JS-->
+					<script src="assets/js/scroll.js"></script>
 
 					<!--Slideshow JS-->
 					<script src="assets/js/slide.js"></script>
