--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
 
 		<!--Map section-->
 
-		<section class="map">
+		<section class="home-map">
 			<h2>Somerset Map</h2>
-			<div></div>
+			<div id="mapping"></div>
 		</section>
 
 		<!--Bottom navigation, for user flexibility -->
@@ -155,9 +155,9 @@
 		<br>
 
 		<section class="bottom-nav">
-        <h6>Our trails</h6>
+			<h6>Our trails</h6>
 			<div class="dropup">
-            <button class="dropbtn">Explore</button>
+				<button class="dropbtn">Explore</button>
 				<div class="dropup-content">
 					<a href="staple.html">Staple Hill</a>
 					<a href="cheddar-gorge.html">Cheddar Gorge</a>
@@ -171,10 +171,10 @@
 
 		<br>
 
-        <!--Scroll back to top button-->
-        <div>
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        </div>
+		<!--Scroll back to top button-->
+		<div>
+			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+		</div>
 
 		<!--Footer section-->
 
@@ -199,8 +199,8 @@
 		<!--Bootstrap library-->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-        <!--Scroll button JS-->
-        <script src="assets/js/scroll.js"></script>
+		<!--Scroll button JS-->
+		<script src="assets/js/scroll.js"></script>
 
 		<!--Navigation bar JS-->
 		<script src="assets/js/nav.js"></script>
