Update slideshow height& width

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 6</div>
-				<img src="assets/images/banner/cover-image.jpg" alt="Home page banner" style="width:100%">
+				<img src="assets/images/banner/cover-image.jpg" alt="Home page banner">
 				<div class="container">
 					<button class="btn" onclick="document.location = 'index.html'">Home</button>
 				</div>
@@ -99,7 +99,7 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 6</div>
-				<img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge" style="width:100%">
+				<img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge" style="100%">
 				<div class="container">
 					<button class="btn" onclick="document.location = 'cheddar-gorge.html'"><h5>View here:</h5>Cheddar Gorge</button>
 				</div>
@@ -107,7 +107,7 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">4 / 6</div>
-				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" alt="Blagdon Lake" style="width:100%">
+				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" alt="Blagdon Lake" style="100%">
 				<div class="container">
 					<button class="btn" onclick="document.location = 'blagdon.html'"><h5>View here:</h5>Blagdon Lake</button>
 				</div>
@@ -115,7 +115,7 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">5 / 6</div>
-				<img src="assets/images/banner/coastal-banner.jpg" alt="Somerset Coastal Path" style="width:100%">
+				<img src="assets/images/banner/coastal-banner.jpg" alt="Somerset Coastal Path" style="100%">
 				<div class="container">
 					<button class="btn" onclick="document.location = 'somerset-coastal.html'"><h5>View here:</h5>Somerset Coastal Path</button>
 				</div>
@@ -123,7 +123,7 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">6 / 6</div>
-				<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park" style="width:100%">
+				<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park" style="100%">
 				<div class="container">
 					<button class="btn" onclick="document.location = 'exmoor.html'"><h5>View here:</h5>Exmoor National Park</button>
 				</div>
