Add JQuery to text sections& clean html and css code formatting

--- a/blagdon.html
+++ b/blagdon.html
@@ -47,9 +47,10 @@
 	<!--cover picture-->
 
 	<section class="blagdon-banner">
-		<br>
-		<h6>Explore the best trails one step at a time</h6>
-		<div class="banner-outer"></div>
+		<div class="blagdon-banner-outer">
+			<br>
+			<h4>Explore the best trails one step at a time</h4>
+		</div>
 	</section>
 
 	<br>
@@ -96,7 +97,7 @@
 					<!--Map section-->
 					<section>
 						<h2 class="map-text">Blagdon Lake Map</h2>
-                        <br>
+						<br>
 						<div id="map">
 						</div>
 					</section>
@@ -151,6 +152,9 @@
 
 					<!--Bootstrap library-->
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+					<!--texts JS-->
+					<script src="assets/js/text.js"></script>
 
 					<!--Scroll button JS-->
 					<script src="assets/js/scroll.js"></script>
