--- a/exmoor.html
+++ b/exmoor.html
@@ -48,9 +48,10 @@
 	<!--cover picture-->
 
 	<section class="exmoor-banner">
-		<br>
-		<h6>Explore the best trails one step at a time</h6>
-		<div class="banner-outer"></div>
+		<div class="exmoor-banner-outer">
+			<br>
+			<h4>Explore the best trails one step at a time</h4>
+		</div>
 	</section>
 
 	<!--Slideshow section -->
@@ -94,7 +95,7 @@
 
 					<section>
 						<h2 class="map-text">Exmoor National Park Map</h2>
-                        <br>
+						<br>
 						<div id="map">
 						</div>
 					</section>
@@ -149,6 +150,9 @@
 					<!--Bootstrap library-->
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+					<!--texts JS-->
+					<script src="assets/js/text.js"></script>
+
 					<!--Scroll button JS-->
 					<script src="assets/js/scroll.js"></script>
 
@@ -164,7 +168,8 @@
 					<!--Google maps scripts-->
 					<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-					<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+					<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
+					</script>
 
 					<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap"></script>
 
