--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 	<!--cover picture-->
 
 	<section class="banner">
-		<br>
-		<h6>Explore the best trails one step at a time</h6>
-		<div class="banner-outer"></div>
+    <h4>Explore the best trails one step at a time</h4>
+    <div class="banner-outer">
+        </div>
 	</section>
 
 
@@ -199,6 +199,9 @@
 
 		<!--Bootstrap library-->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+        <!--texts JS-->
+        <script src="assets/js/text.js"></script>
 
 		<!--Scroll button JS-->
 		<script src="assets/js/scroll.js"></script>
