--- a/staple.html
+++ b/staple.html
@@ -48,9 +48,10 @@
 	<!--cover picture-->
 
 	<section class="staple-banner">
-		<br>
-		<h6>Explore the best trails one step at a time</h6>
-		<div class="banner-outer"></div>
+		<div class="staple-banner-outer">
+			<br>
+			<h4>Explore the best trails one step at a time</h4>
+		</div>
 	</section>
 
 	<br>
@@ -97,7 +98,7 @@
 					<!--Map section-->
 					<section>
 						<h2 class="map-text">Staple Hill Map</h2>
-                        <br>
+						<br>
 						<div id="map">
 						</div>
 					</section>
@@ -153,6 +154,9 @@
 
 					<!--Bootstrap library-->
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+					<!--texts JS-->
+					<script src="assets/js/text.js"></script>
 
 					<!--Scroll button JS-->
 					<script src="assets/js/scroll.js"></script>
