Add Jquery selector code to navigation dropdown options

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<!--Navigation, fixed at the top of page for ease of use-->
 
 	<nav class="topnav">
-		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
+		<a href="index.html" class="w3-bar-item w3-button w3-green" title="Home"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Somerset Trails
  <i class="fa fa-caret-down"></i>
