Update blagdon lake imslideshow images& add api key

--- a/index.html
+++ b/index.html
@@ -83,49 +83,49 @@
 
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 6</div>
-				<img src="assets/images/banner/cover-image.jpg" alt="Home page banner">
+				<img src="assets/images/banner/cover-image.jpg" style="width:100%" alt="Home page banner">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'index.html'">Home</button>
+					<button class="btn" onclick="document.location ='index.html'">Home</button>
 				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">2 / 6</div>
-				<img src="assets/images/banner/staple-banner.jpg" alt="Staple Hill" style="width:100%">
+				<img src="assets/images/slideshow/staple/staple02.jpg" alt="Staple Hill" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'staple.html'"><h5>View here:</h5>Staple Hill</button>
+					<button class="btn" onclick="document.location = 'staple.html'">View here: Staple Hill</button>
 				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 6</div>
-				<img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge" style="100%">
+				<img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'cheddar-gorge.html'"><h5>View here:</h5>Cheddar Gorge</button>
+					<button class="btn" onclick="document.location = 'cheddar-gorge.html'">View here: Cheddar Gorge</button>
 				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">4 / 6</div>
-				<img src="assets/images/slideshow/slide-blagdon/blagdon-lake02.jpg" alt="Blagdon Lake" style="100%">
+				<img src="assets/images/slideshow/slide-blagdon/blagdon03.jpg" alt="Blagdon Lake" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'blagdon.html'"><h5>View here:</h5>Blagdon Lake</button>
+					<button class="btn" onclick="document.location = 'blagdon.html'">View here: Blagdon Lake</button>
 				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">5 / 6</div>
-				<img src="assets/images/banner/coastal-banner.jpg" alt="Somerset Coastal Path" style="100%">
+				<img src="assets/images/slideshow/coastal/coastal-path03.jpg" alt="Somerset Coastal Path" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'somerset-coastal.html'"><h5>View here:</h5>Somerset Coastal Path</button>
+					<button class="btn" onclick="document.location = 'somerset-coastal.html'">View here: Somerset Coastal Path</button>
 				</div>
 			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext">6 / 6</div>
-				<img src="assets/images/banner/exmoor-banner.jpg" alt="Exmoor National Park" style="100%">
+				<img src="assets/images/slideshow/slide-exmoor/exmoor03.jpg" alt="Exmoor National Park" style="width:100%">
 				<div class="container">
-					<button class="btn" onclick="document.location = 'exmoor.html'"><h5>View here:</h5>Exmoor National Park</button>
+					<button class="btn" onclick="document.location = 'exmoor.html'">View here: Exmoor National Park</button>
 				</div>
 			</div>
 
@@ -220,7 +220,7 @@
 
 		<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
 
-		<script src="https://maps.googleapis.com/maps/api/js?key=......&callback=initMap"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap"></script>
 
 
 </body>
