--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 	<link
 		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
 		rel="#">
+<!--map height& width-->
+	<style>
+		#map {
+			height: 30rem;
+			width: 100%;
+		}
+	</style>
 </head>
 
 <body>
@@ -190,6 +197,23 @@
 		</footer>
 
 		<!--Scripts-->
+		<script>
+			function initMap() {
+                //map option
+            var options = {
+                zoom = 8,
+                center: {lat: 51.1800, lng: -3.0000}
+            }
+            //new map
+            var map = new google.maps.Map(document.getElementById("map"), options);
+
+            //add marker
+            var marker = new google.maps.Marker({
+                position: {lat: 51.1800, lng: -3.0000},
+                map: map
+            });
+        }
+		</script>
 
 		<!--Jquery-->
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -220,7 +244,9 @@
 
 		<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
 
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap"></script>
+		<script async defer
+			src="https://maps.googleapis.com/maps/api/js?key=...&callback=initMap">
+		</script>
 
 
 </body>
