Add new js file: banner.js for header image& update banner styling

--- a/index.html
+++ b/index.html
@@ -52,33 +52,18 @@
 	</nav>
 
 	<!--cover picture-->
-
-	<section class="banner">
-		<h4>Explore the best trails one step at a time</h4>
-		<div class="banner-outer">
-		</div>
-	</section>
-
-
-	<section>
-		<div class="container">
-			<div class="introduction">
-				<h2>Trails</h2>
-				<br>
-				<p>A trail is usually a path, track or unpaved lane or road. In the United Kingdom and the Republic of
-					Ireland path or footpath is the preferred term for a walking trail. The term is also applied, in
-					North America, to routes along rivers, and sometimes to highways.
-				</p>
-			</div>
-		</div>
-	</section>
+    <section>
+    <div class="banner">
+        <h4 class="headline">Explore the best trails one step at a time</h4>
+    </div>
+    </section>
 
 	<br>
 
 	<!--Slideshow section-->
 
 	<div class="container">
-		<div class="slide-intro">
+		<div>
 			<br>
 			<h2>Gallery</h2>
 			<p>Checkout the trails below:</p>
@@ -218,6 +203,11 @@
 		<!--Bootstrap library-->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+        <!--gsap& tweenmax libraries, apply to banner-->
+       <script> https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js</script>
+
+       <script>https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js</script>
+
 		<!--texts JS-->
 		<script src="assets/js/text.js"></script>
 
@@ -232,6 +222,9 @@
 
 		<!--Slideshow JS-->
 		<script src="assets/js/slide.js"></script>
+
+        <!--Banner JS-->
+        <script src="assets/js/banner.js"></script>
 
 		<!--Google maps scripts-->
 
