--- a/staple.html
+++ b/staple.html
@@ -170,6 +170,13 @@
 					<!--Bootstrap library-->
 					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+					<!--gsap& tweenmax libraries, apply to banner-->
+					<script>
+						https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
+					</script>
+
+                    <script>https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js</script>
+
 					<!--texts JS-->
 					<script src="assets/js/text.js"></script>
 
