--- a/blagdon.html
+++ b/blagdon.html
@@ -147,9 +147,9 @@
 						</div>
 					</footer>
 
-		<!--Scripts-->
-		<script>
-			var map;
+					<!--Scripts-->
+					<script>
+						var map;
             //create map object, call id map and add elements to map object such as latitude& longitude
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
@@ -158,42 +158,50 @@
         });
       }
 
-		</script>
+					</script>
 
-		<!--Jquery-->
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+					<!--Jquery-->
+					<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
-		<!--Popper-->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+					<!--Popper-->
+					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-		<!--Bootstrap library-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+					<!--Bootstrap library-->
+					<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-		<!--texts JS-->
-		<script src="assets/js/text.js"></script>
+					<!--gsap& tweenmax libraries, apply to banner-->
+					<script>
+						https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
+					</script>
 
-		<!--Scroll button JS-->
-		<script src="assets/js/scroll.js"></script>
+                    <script>https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js</script>
 
-		<!--Navigation bar JS-->
-		<script src="assets/js/nav.js"></script>
+					<!--texts JS-->
+					<script src="assets/js/text.js"></script>
 
-		<!--Maps JS-->
-		<script src="assets/js/maps.js"></script>
+					<!--Scroll button JS-->
+					<script src="assets/js/scroll.js"></script>
 
-		<!--Slideshow JS-->
-		<script src="assets/js/slide.js"></script>
+					<!--Navigation bar JS-->
+					<script src="assets/js/nav.js"></script>
 
-		<!--Google maps scripts-->
+					<!--Maps JS-->
+					<script src="assets/js/maps.js"></script>
 
-		<script async defer
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
-		</script>
+					<!--Slideshow JS-->
+					<script src="assets/js/slide.js"></script>
+
+					<!--Google maps scripts-->
+
+					<script async defer
+						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
+					</script>
 
 
-		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+					<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-		<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+					<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js">
+					</script>
 </body>
 
 </html>
