--- a/blagdon.html
+++ b/blagdon.html
@@ -66,10 +66,9 @@
 	<!--Slideshow section -->
 
 	<div class="container">
-		<div class="slide-intro">
+		<div>
 			<br>
-			<h2>Blagdon Lake</h2>
-			<p>Checkout the Blagdon Lake below:</p>
+			<h2>Explore Blagdon Lake below:</h2>
 			<br>
 </div>
 		</div>
@@ -104,7 +103,7 @@
 
 					<!--Map section-->
 					<section>
-						<h2 class="map-text">Blagdon Lake Map</h2>
+						<h2>Blagdon Lake Map</h2>
 						<br>
 						<div id="map">
 						</div>
@@ -149,6 +148,10 @@
 
 					<!--Scripts-->
 					<script>
+						var locations = [
+                        ['Blagdon Lake', 51.3348101, -2.7040838]//call map location for marker
+                    ];
+
 						var map;
             //create map object, call id map and add elements to map object such as latitude& longitude
       function initMap() {
@@ -156,6 +159,23 @@
           center: {lat: 51.3348101, lng: -2.7040838},
           zoom: 14
         });
+                    var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {  
+      marker = new google.maps.Marker({
+        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+        map: map
+      });
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infowindow.setContent(locations[i][0]);
+          infowindow.open(map, marker);
+        }
+      })(marker, i));
+    }
       }
 
 					</script>
@@ -174,7 +194,9 @@
 						https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
 					</script>
 
-                    <script>https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js</script>
+					<script>
+						https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js
+					</script>
 
 					<!--texts JS-->
 					<script src="assets/js/text.js"></script>
