--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 	</nav>
 
 	<!--cover picture-->
-    <section>
-    <div class="banner">
-        <h4 class="headline">Explore the best trails one step at a time</h4>
-    </div>
-    </section>
+	<section>
+		<div class="banner">
+			<h4 class="headline">Explore the best trails one step at a time</h4>
+		</div>
+	</section>
 
 	<br>
 
@@ -65,8 +65,7 @@
 	<div class="container">
 		<div>
 			<br>
-			<h2>Gallery</h2>
-			<p>Checkout the trails below:</p>
+			<h2>Explore the trails below</h2>
 			<br>
 </div>
 		</div>
@@ -137,7 +136,7 @@
 
 		<!--Map section-->
 		<section>
-			<h2 class="map-text">Somerset Map</h2>
+			<h2>Somerset Map</h2>
 			<br>
 			<div id="map">
 			</div>
@@ -183,15 +182,39 @@
 
 		<!--Scripts-->
 		<script>
+			var locations = [
+      ['Exmoor National Park', 51.040565, -3.5551257, 4],
+      ['Somerset Coastal Path', 51.2072165, -3.4641482, 5],
+      ['Staple Hill', 50.9445268, -3.0913381, 3],
+      ['Blagdon Lake', 51.3348101, -2.7040838, 2],
+      ['Cheddar Gorge', 51.2863881, -2.7690326, 1]
+    ];
 			var map;
             //create map object, call id map and add elements to map object such as latitude& longitude
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 51.180000, lng: -3.000000},
-          zoom: 8
+          zoom: 9
         });
-      }
 
+        var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {  
+      marker = new google.maps.Marker({
+        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+        map: map
+      });
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infowindow.setContent(locations[i][0]);
+          infowindow.open(map, marker);
+        }
+      })(marker, i));
+    }
+      }
 		</script>
 
 		<!--Jquery-->
@@ -203,10 +226,14 @@
 		<!--Bootstrap library-->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-        <!--gsap& tweenmax libraries, apply to banner-->
-       <script> https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js</script>
+		<!--gsap& tweenmax libraries, apply to banner-->
+		<script>
+			https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
+		</script>
 
-       <script>https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js</script>
+		<script>
+			https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js
+		</script>
 
 		<!--texts JS-->
 		<script src="assets/js/text.js"></script>
@@ -223,8 +250,8 @@
 		<!--Slideshow JS-->
 		<script src="assets/js/slide.js"></script>
 
-        <!--Banner JS-->
-        <script src="assets/js/banner.js"></script>
+		<!--Banner JS-->
+		<script src="assets/js/banner.js"></script>
 
 		<!--Google maps scripts-->
 
