--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -66,10 +66,9 @@
 	<!--Slideshow section -->
 
 	<div class="container">
-		<div class="slide-intro">
+		<div>
 			<br>
-			<h2>Somerset Coastal Path</h2>
-			<p>Checkout the path below:</p>
+			<h2>Explore the Somerset Coastal Path below:</h2>
 			<br>
 </div>
 		</div>
@@ -103,7 +102,7 @@
 
 					<!--Map section-->
 					<section>
-						<h2 class="map-text">Somerset Coastal Path Map</h2>
+						<h2>Somerset Coastal Path Map</h2>
 						<br>
 						<div id="map">
 						</div>
@@ -147,6 +146,11 @@
 
 					<!--Scripts-->
 					<script>
+						var locations = [
+                        ['Somerset Coastal Path', 50.215696, -5.4903855, 1]//call map location for marker
+                    ];
+
+
 						var map;
             //create map object, call id map and add elements to map object such as latitude& longitude
       function initMap() {
@@ -154,6 +158,24 @@
           center: {lat: 50.215696, lng: -5.4903855},
           zoom: 14
         });
+        
+        var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {  
+      marker = new google.maps.Marker({
+        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+        map: map
+      });
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infowindow.setContent(locations[i][0]);
+          infowindow.open(map, marker);
+        }
+      })(marker, i));
+    }
       }
 					</script>
 
@@ -171,7 +193,9 @@
 						https://cdnjs.cloudflare.com/ajax/libs/timelinejs/3.6.6/js/timeline-min.js
 					</script>
 
-                    <script>https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js</script>
+					<script>
+						https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js
+					</script>
 
 					<!--texts JS-->
 					<script src="assets/js/text.js"></script>
